--- a/privacy_game/css/styles.css
+++ b/privacy_game/css/styles.css
@@ -1,3 +1,65 @@
 body {
-	font-family: Helvetica;
+background-color: rgba(175,175,175,1);
+background: @include filter-gradient(#b3dced, #bce0ee, horizontal);
+background: @include background-image(linear-gradient(left, rgba(175,175,175,1) 0%, rgba(255,255,255,1) 50%, rgba(175,175,175,1) 100%));
+border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+border: 4px dotted #000000;
+-webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+background: rgba(175,175,175,1);
+background: -moz-linear-gradient(left, rgba(175,175,175,1) 0%, rgba(255,255,255,1) 50%, rgba(175,175,175,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(175,175,175,1)), color-stop(50%, rgba(255,255,255,1)), color-stop(100%, rgba(175,175,175,1)));
+background: -webkit-linear-gradient(left, rgba(175,175,175,1) 0%, rgba(255,255,255,1) 50%, rgba(175,175,175,1) 100%);
+background: -o-linear-gradient(left, rgba(175,175,175,1) 0%, rgba(255,255,255,1) 50%, rgba(175,175,175,1) 100%);
+background: -ms-linear-gradient(left, rgba(175,175,175,1) 0%, rgba(255,255,255,1) 50%, rgba(175,175,175,1) 100%);
+background: linear-gradient(to right, rgba(175,175,175,1) 0%, rgba(255,255,255,1) 50%, rgba(175,175,175,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', endColorstr='#bce0ee', GradientType=1 );
+}
+
+
+h1 {
+  font-family: Tahoma;
+  color: #000;
+  padding: 0;
+  margin-bottom: 5px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 100%;
+  color: #000;
+  margin-bottom: 5px;
+}
+
+div {
+  font-family: Tahoma;
+  color: #000;
+  padding: 0;
+  margin-bottom: 5px;  
+}
+
+.Box {
+  border: solid 2px #000;
+  padding-left: 20px;
+  padding-right: 5px;
+  padding-bottom: 10px;
+  padding: auto 20px 10px 20px;
+  width: 95%;
+  margin: 20px;
+  margin-bottom: 5px;
+}
+
+canvas {    
+  margin: auto;  
+}
+
+#zip {    
+   top: 50%;     left: 200px;     position: absolute;
+}
+
+#container {     
+    top: 5%;     left: 100px;     position: absolute;
 }
